[tool.poetry]
name = "molecule-blog"
version = "0.1.0"
description = ""
authors = ["Michał Wartacz <moleculeos.org@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.80.0"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
